# sophie-website

./: .copier-answers.yml  .gitignore  Cargo.toml  README.md  site.yml  style.css
.cargo/: config.toml
crates/render/: Cargo.toml
crates/render/src/: config.rs  main.rs  parameters.rs  render.rs  templates.rs
data/: blog-body.html  config.yml  index-body.html  secwets-body.html
docs/for-developers/: common-tasks.md  license-blurbs.md
pixel-art-editor/: README.md  bun.lockb  package.json
pixel-art-editor/src/lib/editor/: Editor.svelte  layer.ts  viewport.ts
pixel-art-editor/src/routes/: +page.svelte
static/: index.html  style.css
templates/: main-layout.html.handlebars
