[package]
authors.workspace = true
categories.workspace = true
description = "A simple static site renderer."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "render"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]

[features]
